[package]
name = "o_ads_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
http = "1.3.1"
ipnetwork = { version = "0.21.1", features = ["serde"] }
rustls = "0.23.25"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
sqlx = { version = "0.8.3", features = [
  "chrono",
  "derive",
  "ipnetwork",
  "json",
  "macros",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "uuid",
] }
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
